[tool.poetry]
name = "training-no-gil"
version = "0.1.0"
description = ""
authors = ["Hojung Yun <hojung.yun@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
